# TransitFoamer

./: .gitignore  Cargo.toml  Documentation.md  README.md  api.py  calendar.py  data_analysis_exp.py  fetcher.py  functions.py  import.py  interact.py  main.py  main_new.py  prt_bus_trips.json  prt_bus_vehicles.json  prt_train_trips.json  prt_train_vehicles.json  utils.py  via
data/: __init__.py  realtime_feeds.json  static_feeds.json
data/prt/: prtroutestostop.json  prttripsperroute.json  routesperstop.json  trips-bus.txt  trips-train.txt  vehicles-bus.txt  vehicles-train.txt
data/via/: vehicles-bus.txt
fetchers/: kc.py  pgh.py  via.py
realtime/: urls.txt
src/: app.rs  backup.txt  classes.rs  config.rs  dummy.rs  feedmessage.rs  fetcher.py  gtfs.rs  gtfs_realtime.rs  gtfs_rt.rs  gtfs_static.rs  gtfsrt.rs  gtfsstatic.rs  import.rs  iohandle.rs  lib.rs  main.rs  mod.rs  realtime.rs  script.rs  scripts.rs  search.rs  staticfeed.rs  test  transit_realtime.rs  tui.rs  typeconv.rs
src/frontend/: package.json
src/gtfs/: gtfsrt.rs  gtfsstatic.rs
static/: interface.py  utils.py
static/chicago/: calendar.txt  routes.txt
static/chicago/cta/: calendar.txt  calendar_dates.txt  routes.txt  stops.txt  transfers.txt
static/new_york/mta_bus_bronx/: calendar.txt  calendar_dates.txt  shapes.txt  stops.txt  trips.txt
static/new_york/mta_bus_brooklyn/: calendar.txt  calendar_dates.txt  routes.txt  shapes.txt  stops.txt
static/new_york/mta_bus_manhattan/: calendar.txt  calendar_dates.txt  shapes.txt  stops.txt  trips.txt
static/new_york/mta_bus_queens/: calendar.txt  (+4 more)
(+67 files in other folders)
