[package]
name = "transitfoamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

protobuf = "3.5.0"
reqwest = "0.12.5"
gtfs-realtime = "0.1.3"
prost = "0.13.3"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
csv = "1.3.1"
ratatui = "0.29.0"
crossterm = "0.28.1"
color-eyre = "0.6.3"
serde_json = "1.0.139"
