[package]
name = "transitfoamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "3.7.2"
reqwest = "0.12.5"
gtfs-realtime = "0.1.3"
prost = "0.13.3"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
csv = "1.3.1"
serde = "1.0.219"
chrono = "0.4.41"

[dev-dependencies]
ring = "0.17.13"
openssl = "0.10.72"

